@@ -1,3 +1,7 @@
+Tue May 12 06:48:51 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* flax/searchclient/client.py: Improve error output.
+
 Sat May 09 16:29:36 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* flax/searchclient/client.py,
